fix spacing

--- a/assets/source/sass/elements/_list.scss
+++ b/assets/source/sass/elements/_list.scss
@@ -9,7 +9,7 @@
         background-color: #000 !important;
     }
     .mce-content-body ul, .modularity-mod-text .box-content ul:not(.social-feed), .unordered-list, article ul:not(.nav):not(.slider-items):not(.line-numbers):not(.player-playlist):not(.social-feed):not(.dropdown-menu):not(.image-gallery):not(.unlist) {
-        margin-top: 32px;
+        margin-top: 24px;
     }
     
 }
